# CardanoTicker

./: .gitignore  .pre-commit-config.yaml  Hardware_Components_List.md  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: Cardano_Ticker_Installation_Guide.md  Cardano_Ticker_Installation_Guide_Raspberry.md  System_Components.md  installation_guide_esp32.md
m1/: functional_specifications.md  hardware_components_list.md
notebooks/: playground.ipynb
resources/case_models/waveshare_4.01/: back_lid.stl  back_lid_v1.stl  back_lid_v2_1st_piece.stl  back_lid_v2_2nd_piece.stl  main_body.stl  main_frame.stl
scripts/: setup_cardano_ticker.sh  setup_cardano_ticker_linux.sh  setup_cardano_ticker_pi.sh  setup_pi.sh
src/cardano_ticker/dashboards/: config.py  dashboard_commands.py  dashboard_controller.py  dashboard_generator.py  dashboard_provider.py
src/cardano_ticker/dashboards/samples/: pool_dashboard_example.json
src/cardano_ticker/data/: config.json
src/cardano_ticker/data/dashboard_samples/: pool_dashboard_dark_example.json  portfolio_dashboard_example.json  portfolio_dashboard_live.json  portfolio_dashboard_v2.json  portfolio_dashboard_v3.json  (+7 more)
src/cardano_ticker/data_fetcher/: crypto_price_fetcher.py  data_fetcher.py  portfolio_fetcher.py
src/cardano_ticker/utils/: constants.py  currency.py
src/cardano_ticker/widgets/: __init__.py  w_blockchain_stats.py  w_coin_price.py  w_layout.py  w_plot_chart.py  w_pool.py  w_pool_history.py  w_portfolio_charts.py
src/dashboards/: dashboard_generator.py  dashboard_provider.py
src/dashboards/samples/: network_dashboard_example.json  pool_dashboard_example.json  price_dashboard_example.json
src/data_fetcher/: data_fetcher.py
src/displayers/lcd/: display.py  requirements.txt
src/displayers/waveshare/: display.py  requirements.txt
src/utils/: colors.py  constants.py  currency.py
src/widgets/: w_blockchain_stats.py  w_coin_price.py  w_layout.py  w_plot_chart.py  w_pool.py  w_pool_history.py
src/widgets/generic/: w_abstract.py  w_charts_generic.py  w_table_generic.py  w_text.py
(+11 files in other folders)
