[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardano_ticker"
version = "0.1.0"
description = "A customizable Cardano Ticker with e-ink and LCD display options."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andrei Georgescu", email = "andrei.georgescoo@yahoo.com"},
    {name = "Marius Georgescu", email = "georgescumarius@live.com"},

    ]
dependencies = [
    "requests>=2.25.0,<=3.0.0",
    "matplotlib>=3.4.0,<=3.6.3",
    "numpy>=1.26.3,<2",
    "pandas<=2.2.0",
    "Pillow>=9.5.0,<=11.1.0",
    "blockfrost-python>=0.6.0",
    "flask>=2.1.0",
    "werkzeug>=2.2.3"
]
requires-python = ">=3.9,<=3.11.2"

[tool.setuptools]
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
cardano_ticker = ["data/**/*"]

[project.scripts]
cardano-ticker-controller = "cardano_ticker.dashboards.dashboard_controller:controller"
cardano-ticker-provider = "cardano_ticker.dashboards.dashboard_provider:main"
